--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ ios_app_country                           : us                                  
 
 appstore_link                             :                                           # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
-presskit_download_link                    : https://emilbaehr.com                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
+presskit_download_link                    : # https://emilbaehr.com                                          # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
 
 app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
@@ -37,7 +37,7 @@ features                                  :
     
   - title                                 : Integrated with Apple Music
     description                           : Integrate seamlessly with Apple Music and access all your playlists to create immersive soundscapes.
-    fontawesome_icon_name                 : fa-apple
+    fontawesome_icon_name                 : link
 
   - title                                 : Sounds for Every Scene
     description                           : Packed with sound effects for both sci-fi and fantasy style games, the soundboard adds depth to your scenes.
@@ -71,7 +71,7 @@ cover_overlay_transparency                : 0.3
 
 device_color                              : coral                                     # Set to: blue, black, yellow, coral or white.
 
-body_background_color                     : "#ffffff"
+body_background_color                     : "#000000"
 
 link_color                                : "#9102FE"
 
@@ -79,14 +79,14 @@ app_title_color                           : "#ffffff"
 app_price_color                           : "#ffffff"
 app_description_color                     : "#ffffff"
 
-feature_title_color                       : "#000000"
-feature_text_color                        : "#666666"
+feature_title_color                       : "#ffffff"
+feature_text_color                        : "#bbbbbb"
 
-feature_icons_foreground_color            : "#1d63ea"
-feature_icons_background_color            : "#e6e6e6"
+feature_icons_foreground_color            : "#9102FE"
+feature_icons_background_color            : "#444444"
 
 social_icons_foreground_color             : "#9102FE"
-social_icons_background_color             : "#e6e6e6"
+social_icons_background_color             : "#444444"
 
 footer_text_color                         : "#666666"
 
