--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #page title
-page_title                                : Summoning Stone                                           # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title                                : Summoning Stone - The best Tabletop RPG companion app for Music, Ambience and Sound Effects                                           # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
 ios_app_id                                : 6443965587                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
@@ -24,7 +24,7 @@ your_city                                 : Melbourne
 email_address                             : hello@summoningstone.app
 #facebook_username                         :
 #instagram_username                        : ebaehr
-twitter_username                          : beaunouvelle
+#twitter_username                          : beaunouvelle
 #github_username                           : emilbaehr
 youtube_username                          : GetSwifty
 
