--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #page title
-page_title                                : Summoning Stone - The best Tabletop RPG companion app for Music, Ambience and Sound Effects                                           # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title                                : Summoning Stone - The best Tabletop RPG app for Music, Ambience and Sound Effects                                           # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
 ios_app_id                                : 6443965587                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
